--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-ui
+spring.datasource.url=jdbc:h2:mem:cryptodb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.data-username=sa
+spring.datasource.data-password=
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate-dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
